style (cart-wrapper-component) : fix overflowing the elements and grid system from auto keyword to template keyword

--- a/src/style/components/_cart_wrapper.scss
+++ b/src/style/components/_cart_wrapper.scss
@@ -1,7 +1,7 @@
 @mixin \$components\$cart-wrapper {
 	display: grid;
-	grid-auto-rows: 200px 200px 200px;
-	grid-auto-columns: 450px 450px 450px;
+	grid-template-rows: 200px 200px 200px;
+	grid-template-columns: 450px 450px 450px;
 	grid-auto-flow: column;
 	gap: 72px;
 	padding: 75px 150px;
